The Button Of HTML

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>Welcome to Blockcreattion Mods Repositorie!!!</h1>
     <h2>欢迎来到Blockcreattion模组仓库！！！</h2>
     <h3>点击下方链接进入Github仓库页面上传模组，我们会进行审核。</h3>
+    <a href="https://github.com/Tiger1228cym/bct-mods/" target="_blank">
+        <button>点我进入Github仓库页面上传模组</button>
+    </a>
 </body>
 </html>
